objects/LAT_DocuSign_Status__c.object
<CustomObject>
    <description>Represent a Docusign Envelope status</description>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <label>Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_Date__c</fullName>
        <label>Declined Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <label>Declined Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Envelope_ID__c</fullName>
        <description>Envelope Id - external Id in the docusign app</description>
        <externalId>true</externalId>
        <inlineHelpText>Envelope Id - external Id in the docusign app</inlineHelpText>
        <label>DocuSign Envelope ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Status__c</fullName>
        <label>Envelope Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lat_contract2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrato</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipLabel>Docusign Status</relationshipLabel>
        <relationshipName>Docusign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecipientsSize__c</fullName>
        <label>RecipientsSize</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_Date_Time__c</fullName>
        <label>Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>api_request_body__c</fullName>
        <label>api_request_body</label>
        <length>120768</length>
        <type>LongTextArea</type>
    </fields>
    <label>LAT Docusign Status custom</label>
    <nameField>
        <label>DocuSign Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docusign Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>